--- a/src/main/resources/assets/test-mod/lang/zh_cn.json
+++ b/src/main/resources/assets/test-mod/lang/zh_cn.json
@@ -1,4 +1,5 @@
 {
   "itemGroup.limbusium_group": "灵薄",
-  "item.test-mod.limbusium_ingot": "灵薄合金锭"
+  "item.test-mod.limbusium_ingot": "灵薄合金锭",
+  "block.test-mod.limbusium_block": "灵薄合金块"
 }
